[package]
name = "copyrat"
version = "0.4.1"
authors = ["graelo <graelo@graelo.cc>"]
edition = "2021"
description = "This is tmux-copycat on Rust steroids."
repository = "https://github.com/graelo/tmux-copyrat"
keywords = ["rust", "tmux", "tmux-plugin", "tmux-copycat"]
license = "MIT"

[dependencies]
thiserror = "1"

termion = "1.5"
regex = "1.5"
clap = { version = "3.0.0-beta.5", features = ["wrap_help"]}
sequence_trie = "0.3.6"
duct = "0.13"

[[bin]]
name = "copyrat"
path = "src/bin/copyrat.rs"

[[bin]]
name = "tmux-copyrat"
path = "src/bin/tmux_copyrat.rs"
